--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # ไลบรารีที่คุณต้องการ (จัดย่อหน้าให้ถูกแล้ว)
   sqflite: ^2.3.3+1
   path: ^1.9.0
   provider: ^6.1.2
+  intl: ^0.19.0  # เพิ่มบรรทัดนี้
 
 dev_dependencies:
   flutter_test:
